--- a/templates/index.html
+++ b/templates/index.html
@@ -273,7 +273,15 @@
         </div>
     </div>
 
-    <!-- Password Update Modal -->
+
+            <!-- graph
+            <div class="mb-3">
+                <h5>Mortgage Details</h5>
+                <iframe src="/dash/" width="100%" height="500px" style="border:none;"></iframe>
+            </div>
+            -->
+
+    <!-- password modal -->
     <div class="modal fade" id="updatePasswordModal" tabindex="-1" aria-labelledby="updatePasswordModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
