updated README file and created a logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/static/homeloan.png" alt="Logo" width="30" height="30" class="d-inline-block align-top">
+                <img src="/static/mortgage_calculator_logo.png" alt="Logo" width="30" height="30" class="d-inline-block align-top">
                 Mortgage Monitor
             </a>
             <div class="d-flex align-items-center">
