--- a/templates/index.html
+++ b/templates/index.html
@@ -13,20 +13,22 @@
     </style>
 </head>
 <body class="bg-white">
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="/static/mortgage_calculator_logo.png" alt="Logo" width="30" height="30" class="d-inline-block align-top">
-                Mortgage Monitor
-            </a>
-            <div class="d-flex align-items-center">
-                <span class="navbar-text me-3">Hello &#128512;, <span class="text-primary">{{ username }}</span>!</span>
-                <button class="btn btn-warning me-2" id="updatePasswordBtn">Update Password</button>
-                <button class="btn btn-danger" id="removeAccountBtn">Remove Account</button>
-                <a class="btn btn-outline-secondary ms-3" href="{{ url_for('logout') }}">Logout</a>
-            </div>
+      <nav class="navbar navbar-light bg-light py-3">
+    <div class="container-fluid">
+        <a class="navbar-brand fs-2" href="#">
+            <img src="/static/mortgage_calculator_logo.png" alt="Logo" width="90" height="70" class="d-inline-block align-top">
+            Mortgage Monitor
+        </a>
+        <div class="d-flex align-items-center">
+            <span class="navbar-text me-3 display-6">Hello &#128512;, <span class="text-primary display-6">{{ username }}</span>!</span>
+            <button class="btn btn-warning me-2 fs-5" id="updatePasswordBtn">Update Password</button>
+            <button class="btn btn-danger me-2 fs-5" id="removeAccountBtn">Remove Account</button>
+            <a class="btn btn-outline-secondary ms-3 fs-5" href="{{ url_for('logout') }}">Logout</a>
         </div>
-    </nav>
+    </div>
+</nav>
+
+
 
     <div class="container mt-4">
         <div class="d-flex justify-content-between align-items-center mb-3">
@@ -57,7 +59,7 @@
                         <h5 class="card-title">{{ mortgage.mortgage_name }}</h5>
 
                         <!-- initial payment -->
-                        <h5>Initial Payment Breakdown</h5>
+                        <h5 class=" text-center">Initial Payment Breakdown</h5>
                         <div class="table-responsive scrollable-table">
                             <table class="table table-striped table-bordered table-hover">
                                 <thead class="table-dark">
@@ -140,7 +142,7 @@
                         </div>
 
                         <!-- maturity Details - monthly -->
-                        <h5>Mortgage Maturity Details - Monthly</h5>
+                        <h5 class=" text-center">Mortgage Maturity Details - Monthly</h5>
                         <div class="table-responsive scrollable-table">
                             <table class="table table-striped table-bordered table-hover">
                                 <thead class="table-dark">
@@ -183,7 +185,7 @@
                         </div>
 
                         <!-- maturity fortnightly -->
-                        <h5>Mortgage Maturity Details - Fortnightly</h5>
+                        <h5 class=" text-center" >Mortgage Maturity Details - Fortnightly</h5>
                         <div class="table-responsive scrollable-table">
                             <table class="table table-striped table-bordered table-hover">
                                 <thead class="table-dark">
@@ -234,7 +236,7 @@
 
                         <!-- amortization -->
                         <hr>
-                        <h5>Amortization Schedule</h5>
+                        <h5 class=" text-center" >Amortization Schedule</h5>
                         <div class="table-responsive scrollable-table">
                             <table class="table table-striped table-bordered table-hover">
                                 <thead class="table-dark">
