--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
         .scrollable-table {
             max-height: 200px;
@@ -47,14 +48,14 @@
                 <select class="form-select" id="mortgageSelect" onchange="displaySelectedMortgage()">
                     <option value="" selected>Select a mortgage</option>
                     {% for mortgage in mortgage_details %}
-                        <option value="{{ mortgage.mortgage_name }}">{{ mortgage.mortgage_name }}</option>
+                        <option value="{{ mortgage.mortgage_name | replace(' ', '_') }}">{{ mortgage.mortgage_name }}</option>
                     {% endfor %}
                 </select>
             </div>
 
             <!-- mortgage details -->
             {% for mortgage in mortgage_details %}
-                <div class="card mb-3 mortgage-details" id="mortgage-{{ mortgage.mortgage_name }}" style="display:none;">
+                <div class="card mb-3 mortgage-details" id="mortgage-{{ mortgage.mortgage_name | replace(' ', '_') }}" style="display:none;">
                     <div class="card-body">
                         <h5 class="card-title">{{ mortgage.mortgage_name }}</h5>
 
@@ -274,14 +275,6 @@
             {% endfor %}
         </div>
     </div>
-
-
-            <!-- graph
-            <div class="mb-3">
-                <h5>Mortgage Details</h5>
-                <iframe src="/dash/" width="100%" height="500px" style="border:none;"></iframe>
-            </div>
-            -->
 
     <!-- password modal -->
     <div class="modal fade" id="updatePasswordModal" tabindex="-1" aria-labelledby="updatePasswordModalLabel" aria-hidden="true">
