--- a/templates/index.html
+++ b/templates/index.html
@@ -270,6 +270,19 @@
                                 </tbody>
                             </table>
                         </div>
+
+                        <div class="mt-3 d-flex justify-content-end">
+                            <a href="{{ url_for('update_mortgage', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-warning me-2">Update Mortgage</a>
+                            <form action="{{ url_for('remove_mortgage', mortgage_id=mortgage.mortgage_id) }}" method="POST" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this mortgage?');">
+                                {% if csrf_token %}
+                                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                                {% endif %}
+                                <button type="submit" class="btn btn-danger">Remove Data</button>
+                            </form>
+                        </div>
+
+
+
                     </div>
                 </div>
             {% endfor %}
