--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Mortgage Monitor</title>
@@ -272,7 +272,7 @@
                         </div>
 
                         <div class="mt-3 d-flex justify-content-end">
-                            <a href="{{ url_for('update_mortgage', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-warning me-2">Update Mortgage</a>
+                            <a href="{{ url_for('update_mortgage', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-primary">Update Mortgage</a>
                             <form action="{{ url_for('remove_mortgage', mortgage_id=mortgage.mortgage_id) }}" method="POST" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this mortgage?');">
                                 {% if csrf_token %}
                                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
@@ -364,3 +364,4 @@
     </script>
 </body>
 </html>
+`
